--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,8 @@
 }
 body{
   box-sizing: inherit;
+  background-color: rgb(235, 228, 223);
+  color: var(--font-color);
   height: 100vh;
   margin: 0;
   padding: 0;
@@ -19,19 +21,32 @@ ul {
 li {
 
 }
-.screen-container {
-  display: flex;
-  height: 100%;
+button {
+  border: none;
+  background-color: inherit;
 }
-.left-side {
-  width: 15%;
-  background-color: rgb(224, 218, 213);
+.hover-effect {
+  border-radius: 8px;
+  padding: 6px;
 }
-
+.hover-effect:hover {
+  background-color: rgba(211, 211, 211, 0.4);
+  cursor: pointer;
+}
 /*Sidebar*/
 .sidebar {
+  width: 15%;
+  height: 100%;
   display: flex;
   flex-direction: column;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 5px;
+  background-color: rgb(235, 228, 223);
 }
 .sidebar-top {
   display: flex;
@@ -57,7 +72,6 @@ li {
 }
 .username {
   font-weight: 500;
-  color: var(--font-color);
 }
 .sidebar-main {
   display: flex;
@@ -68,7 +82,7 @@ li {
   display: flex;
   align-items: center;
   justify-content: left;
-  padding: 5px;
+  padding: 7px;
   color: var(--font-color);
 }
 .sidebar-element:first-child {
@@ -84,18 +98,88 @@ li {
   font-size: 18px;
 }
 
+/*Right Side*/
 .right-side {
   display: flex;
   flex-direction: column;
-  width: 85%;
+  margin-left: 15%;
+  max-width: 100%;
+  height: 100%;
+}
+#rightside {
+  transition: margin-left .5s;
+  padding: 16px;
 }
 .header {
-  background-color: rgb(231, 101, 92);
-  height: 15%;
+  background-color: rgb(253, 253, 253);
+  height: fit-content;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 15px;
+}
+h1 {
+  color: var(--coral-color);
+  font-size: 2.5rem;
+  font-weight: 900;
+  margin: 0;
+}
+.view-container {
+  display: flex;
+}
+.view-icon {
+  height: 22px;
+  margin-right: 8px;
 }
 .main-screen {
-  background-color: lightgrey;
-  min-height: 75%;
+  background-color: rgb(253, 253, 253);
+  min-height: fit-content;
   max-height: max-content;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   flex-grow: 1;
+  padding: 3% 25%;
+
+}
+.main-screen > * {
+  width: 100%;
+}
+h2 {
+  margin: 0;
+  margin-bottom: 10px;
+  padding-bottom: 20px;
+  box-shadow: 0 3px 2px -2px rgb(224, 224, 224);
+}
+.to-do-container {
+  background-color: rgb(253, 253, 253);
+  display: flex;
+  border: 1px solid black;
+}
+.add-new-to-do-container {
+  display: flex;
+  width: fit-content;
+  align-self: flex-start;
+  margin-top: 10px;
+}
+.add-new-to-do-container > *:hover {
+  font-size: 18px;
+  color: var(--coral-color);
+  cursor: pointer;
+}
+.add-new-to-do-container > img {
+  margin-right: 8px;
+}
+.add-new-to-do-container > div {
+  color: rgb(143, 143, 143);
+}
+
+
+.button-container {
+  display: flex;
+  align-items: center;
+}
+.button-container > * {
+  border: 1px solid rgb(143, 143, 143);
+  border-radius: 8px;
 }
