--- a/styles.css
+++ b/styles.css
@@ -4,33 +4,53 @@
 body{
   box-sizing: inherit;
   background-color: rgb(235, 228, 223);
-  color: var(--font-color);
+  color: var(--sidebar-font-color);
   height: 100vh;
   margin: 0;
   padding: 0;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 :root {
-  --font-color: rgb(39, 39, 39);
+  --sidebar-font-color: rgb(39, 39, 39);
   --coral-color: rgb(231, 101, 92);
+  --main-screen-font-color: rgb(75, 75, 75);
+}
+h3 {
+  margin: 0;
+}
+p {
+  margin: 0;
 }
 ul {
   margin: 0;
   padding: 0;
 }
-li {
-
+input {
+  border: none;
+  font-size: 14px;
+  color: var(--main-screen-font-color);
+  background-color: rgb(253, 253, 253);
+}
+input:focus {
+  outline: none;
+}
+input::placeholder {
+  opacity: .7;
+}
+input[type='date'] {
+  font-size: 16px;
 }
 button {
   border: none;
   background-color: inherit;
+  color: inherit;
 }
 .hover-effect {
   border-radius: 8px;
   padding: 6px;
 }
 .hover-effect:hover {
-  background-color: rgba(211, 211, 211, 0.4);
+  background-color: rgba(204, 204, 204, 0.4);
   cursor: pointer;
 }
 /*Sidebar*/
@@ -47,6 +67,7 @@ button {
   transition: 0.5s;
   padding-top: 5px;
   background-color: rgb(235, 228, 223);
+  color: var(--sidebar-font-color);
 }
 .sidebar-top {
   display: flex;
@@ -83,7 +104,6 @@ button {
   align-items: center;
   justify-content: left;
   padding: 7px;
-  color: var(--font-color);
 }
 .sidebar-element:first-child {
   padding-bottom: 10px;
@@ -105,6 +125,7 @@ button {
   margin-left: 15%;
   max-width: 100%;
   height: 100%;
+  color: var(--main-screen-font-color);
 }
 #rightside {
   transition: margin-left .5s;
@@ -140,21 +161,27 @@ h1 {
   align-items: center;
   flex-grow: 1;
   padding: 3% 25%;
-
 }
 .main-screen > * {
   width: 100%;
 }
 h2 {
-  margin: 0;
-  margin-bottom: 10px;
+  margin: 0 0 3px 0;
   padding-bottom: 20px;
   box-shadow: 0 3px 2px -2px rgb(224, 224, 224);
 }
 .to-do-container {
   background-color: rgb(253, 253, 253);
   display: flex;
-  border: 1px solid black;
+  box-shadow: 0 3px 2px -2px rgb(224, 224, 224);
+  padding-bottom: 20px;
+  margin-bottom: 3px;
+}
+.to-do-title {
+  padding-top: 3px;
+}
+.to-do-description {
+  padding: 10px 0;
 }
 .add-new-to-do-container {
   display: flex;
@@ -174,12 +201,56 @@ h2 {
   color: rgb(143, 143, 143);
 }
 
-
+/*Buttons Styling*/
 .button-container {
   display: flex;
   align-items: center;
+  gap: 8px;
 }
 .button-container > * {
-  border: 1px solid rgb(143, 143, 143);
+  border: 1px solid rgb(224, 224, 224);
   border-radius: 8px;
+}
+.button-container > button {
+  display: flex;
+  align-items: center ;
+  text-wrap: nowrap;
+}
+.button-container > button > img {
+  height: 15px;
+  margin-right: 4px;
+}
+
+
+.new-todo-input-container {
+  display: none;
+  flex-direction: column;
+  background-color: rgb(253, 253, 253);
+  border: 1px solid rgb(156, 156, 156);
+  border-radius: 10px;
+  padding: 12px 8px;
+  gap: 8px;
+}
+#task-name {
+  font-weight: 700;
+}
+.save-cancel-button-container {
+  align-self: flex-end;
+}
+.cancel-button {
+  background-color: rgb(245, 245, 245);
+  font-size: 15px;
+  margin-right: 5px;
+}
+.save-task-button {
+  background-color: var(--coral-color);
+  opacity: .5;
+  cursor: not-allowed;
+  color: rgb(253, 253, 253);
+  font-size: 15px;
+  border-radius: 8px;
+  padding: 6px;
+}
+.save-task-button:hover {
+  background-color: rgb(219, 67, 56);
 }
