--- a/styles.css
+++ b/styles.css
@@ -170,15 +170,23 @@ h2 {
   padding-bottom: 20px;
   box-shadow: 0 3px 2px -2px rgb(224, 224, 224);
 }
-.to-do-container {
+.to-do-card {
   background-color: rgb(253, 253, 253);
   display: flex;
+  position: relative;
   box-shadow: 0 3px 2px -2px rgb(224, 224, 224);
   padding-bottom: 20px;
   margin-bottom: 3px;
 }
+.edit-button {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
 .to-do-title {
   padding-top: 3px;
+  text-wrap: wrap;
 }
 .to-do-description {
   padding: 10px 0;
@@ -218,7 +226,7 @@ h2 {
 }
 .button-container > button > img {
   height: 15px;
-  margin-right: 4px;
+  margin-left: 4px;
 }
 
 
