--- a/styles.css
+++ b/styles.css
@@ -180,6 +180,7 @@ h2 {
   padding-bottom: 10px;
   margin-bottom: 3px;
 }
+
 .edit-button {
   position: absolute;
   top: 0;
@@ -187,6 +188,22 @@ h2 {
 }
 .to-do-left-side {
   margin-right: 10px;
+}
+#isCompleted {
+  width: 1.3em;
+  height: 1.3em;
+  background-color: white;
+  border-radius: 50%;
+  vertical-align: middle;
+  border: 1px solid rgb(156, 156, 156);
+  appearance: none;
+  -webkit-appearance: none;
+  outline: none;
+  cursor: pointer;
+}
+#isCompleted:checked {
+  background-color: rgb(243, 185, 181);
+  border: 2px solid var(--coral-color)
 }
 .to-do-title {
   padding-top: 3px;
