--- a/styles.css
+++ b/styles.css
@@ -192,7 +192,8 @@ h2 {
 #isCompleted {
   width: 1.3em;
   height: 1.3em;
-  background-color: white;
+  margin-top: 3px;
+  background-color: rgb(253, 253, 253);
   border-radius: 50%;
   vertical-align: middle;
   border: 1px solid rgb(156, 156, 156);
@@ -305,7 +306,7 @@ h2 {
   width: 100%;
 }
 
-.category-card {
+.category-card, .completed-todo-card {
   background-color: rgb(253, 253, 253);
   display: flex;
   justify-content: space-between;
@@ -334,8 +335,8 @@ h2 {
   color: rgb(143, 143, 143);
 }
 
-/*Sort Screen*/
-.sort-screen {
+/*Completedn Screen*/
+.completed-screen {
   background-color: rgb(253, 253, 253);
   min-height: fit-content;
   max-height: max-content;
@@ -345,6 +346,17 @@ h2 {
   flex-grow: 1;
   padding: 3% 25%;
 }
-.sort-screen > * {
+.completed-screen > * {
   width: 100%;
+}
+.completed-todo-card {
+  background-color: rgb(253, 253, 253);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: start;
+  position: relative;
+  box-shadow: 0 3px 2px -2px rgb(224, 224, 224);
+  padding-bottom: 10px;
+  margin-bottom: 3px;
 }
