--- a/styles.css
+++ b/styles.css
@@ -60,7 +60,7 @@ button {
   display: flex;
   flex-direction: column;
   position: fixed;
-  z-index: 1;
+  /*z-index: 1;*/
   top: 0;
   left: 0;
   overflow-x: hidden;
@@ -126,6 +126,7 @@ button {
   max-width: 100%;
   height: 100%;
   color: var(--main-screen-font-color);
+  position: relative;
 }
 #rightside {
   transition: margin-left .5s;
@@ -257,7 +258,6 @@ h2 {
   font-size: 13px;
   padding: 5px;
 }
-
 .new-todo-input-container, .new-category-input-container {
   display: flex;
   flex-direction: column;
@@ -305,18 +305,17 @@ h2 {
 .category-screen > * {
   width: 100%;
 }
-
-.category-card, .completed-todo-card {
+.category-card {
   background-color: rgb(253, 253, 253);
   display: flex;
   justify-content: space-between;
   align-items: center;
+  height: 40px;
   position: relative;
   box-shadow: 0 3px 2px -2px rgb(224, 224, 224);
   padding-bottom: 10px;
   margin-bottom: 3px;
 }
-
 .add-new-category {
   display: flex;
   width: fit-content;
@@ -335,6 +334,48 @@ h2 {
   color: rgb(143, 143, 143);
 }
 
+.sort-container {
+  display: none;
+  border-radius: 10px;
+  background-color: rgb(253, 253, 253);
+  border:1px solid rgba(204, 204, 204, 1);
+  position: absolute;
+  width: 15%;
+  top: 13%;
+  left: 5px;
+  text-align: center;
+}
+.sort-header {
+  display: flex;
+  padding: 6px 0 0 6px;
+  align-items: center;
+  font-size: 18px;
+  box-shadow: 0 3px 2px -2px rgb(224, 224, 224);
+}
+.sort-header > img {
+  width: 18px;
+  margin-left: 5px;
+}
+.sort-option, .order-option {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.sort-option:nth-child(5) {
+  box-shadow: 0 3px 2px -2px rgb(224, 224, 224);
+}
+.sort-option > img, .order-option > img {
+  display: none;
+}
+.sort-container > .hover-effect > img {
+  width: 15px;
+}
+.sort-container > button {
+  cursor: pointer;
+  opacity: 1;
+  margin: 8px 0;
+}
+
 /*Completedn Screen*/
 .completed-screen {
   background-color: rgb(253, 253, 253);
@@ -344,7 +385,8 @@ h2 {
   flex-direction: column;
   align-items: center;
   flex-grow: 1;
-  padding: 3% 25%;
+  padding: 3% 33%;
+  flex-grow: 1;
 }
 .completed-screen > * {
   width: 100%;
@@ -353,10 +395,17 @@ h2 {
   background-color: rgb(253, 253, 253);
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  align-items: start;
   position: relative;
   box-shadow: 0 3px 2px -2px rgb(224, 224, 224);
   padding-bottom: 10px;
   margin-bottom: 3px;
+}
+.completed-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 40px;
+}
+.completed-header > h3 {
+  padding: 0;
 }
