--- a/styles.css
+++ b/styles.css
@@ -31,19 +31,30 @@ input {
   color: var(--main-screen-font-color);
   background-color: rgb(253, 253, 253);
 }
-input:focus {
+input:focus, select:focus {
   outline: none;
 }
 input::placeholder {
   opacity: .7;
 }
-input[type='date'] {
-  font-size: 16px;
+input[type='datetime-local'] {
+  height: 100%;
 }
 button {
   border: none;
   background-color: inherit;
   color: inherit;
+}
+.screen {
+  background-color: rgb(253, 253, 253);
+  min-height: fit-content;
+  max-height: max-content;
+  flex-direction: column;
+  align-items: center;
+  flex-grow: 1;
+}
+.screen > * {
+  width: 100%;
 }
 .hover-effect {
   border-radius: 8px;
@@ -60,7 +71,6 @@ button {
   display: flex;
   flex-direction: column;
   position: fixed;
-  /*z-index: 1;*/
   top: 0;
   left: 0;
   overflow-x: hidden;
@@ -154,17 +164,8 @@ h1 {
   margin-right: 8px;
 }
 .main-screen {
-  background-color: rgb(253, 253, 253);
-  min-height: fit-content;
-  max-height: max-content;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  flex-grow: 1;
   padding: 3% 25%;
-}
-.main-screen > * {
-  width: 100%;
 }
 h2 {
   margin: 0 0 3px 0;
@@ -181,7 +182,6 @@ h2 {
   padding-bottom: 10px;
   margin-bottom: 3px;
 }
-
 .edit-button {
   position: absolute;
   top: 0;
@@ -189,6 +189,7 @@ h2 {
 }
 .to-do-left-side {
   margin-right: 10px;
+  padding-top: 5px;
 }
 #isCompleted {
   width: 1.3em;
@@ -209,29 +210,27 @@ h2 {
 }
 .to-do-title {
   padding-top: 3px;
-  text-wrap: wrap;
 }
 .to-do-description {
   padding: 5px 0;
 }
-.add-new-to-do-container {
+.add-new-to-do-container, .add-new-category {
   display: flex;
   width: fit-content;
   align-self: flex-start;
   margin-top: 10px;
 }
-.add-new-to-do-container > *:hover {
+.add-new-to-do-container > *:hover, .add-new-category > *:hover {
   font-size: 18px;
   color: var(--coral-color);
   cursor: pointer;
 }
-.add-new-to-do-container > img {
+.add-new-to-do-container > img, .add-new-category > img {
   margin-right: 8px;
 }
-.add-new-to-do-container > div {
+.add-new-to-do-container > div, .add-new-category > div {
   color: rgb(143, 143, 143);
 }
-
 /*Buttons Styling*/
 .button-container {
   display: flex;
@@ -242,6 +241,7 @@ h2 {
   border: 1px solid rgb(224, 224, 224);
   border-radius: 8px;
   font-size: 12px;
+  height: 30px;
 }
 .button-container > button {
   display: flex;
@@ -293,17 +293,8 @@ h2 {
 
 /*Categories Screen*/
 .category-screen {
-  background-color: rgb(253, 253, 253);
-  min-height: fit-content;
-  max-height: max-content;
   display: none;
-  flex-direction: column;
-  align-items: center;
-  flex-grow: 1;
   padding: 3% 40%;
-}
-.category-screen > * {
-  width: 100%;
 }
 .category-card {
   background-color: rgb(253, 253, 253);
@@ -316,24 +307,8 @@ h2 {
   padding-bottom: 10px;
   margin-bottom: 3px;
 }
-.add-new-category {
-  display: flex;
-  width: fit-content;
-  align-self: flex-start;
-  margin-top: 10px;
-}
-.add-new-category > *:hover {
-  font-size: 18px;
-  color: var(--coral-color);
-  cursor: pointer;
-}
-.add-new-category > img {
-  margin-right: 8px;
-}
-.add-new-category > div {
-  color: rgb(143, 143, 143);
-}
 
+/*Sort Window*/
 .sort-container {
   display: none;
   border-radius: 10px;
@@ -378,18 +353,8 @@ h2 {
 
 /*Completedn Screen*/
 .completed-screen {
-  background-color: rgb(253, 253, 253);
-  min-height: fit-content;
-  max-height: max-content;
   display: none;
-  flex-direction: column;
-  align-items: center;
-  flex-grow: 1;
   padding: 3% 33%;
-  flex-grow: 1;
-}
-.completed-screen > * {
-  width: 100%;
 }
 .completed-todo-card {
   background-color: rgb(253, 253, 253);
